--- a/templates/sponsor/sponsor_list.html
+++ b/templates/sponsor/sponsor_list.html
@@ -17,9 +17,8 @@
                     <div class="col-md-10">
                         <h3>{{sponsor.name}}</h3>
                         <ul class="list-inline">
-                            <li><i class="fa fa-map-marker color-green"></i> Europe</li>
+                            <li><i class="fa fa-map-marker color-green"></i> Canada</li>
                             <li><i class="fa fa-globe color-green"></i> <a class="linked" href="{{ sponsor.url }}">{{ sponsor.url }}</a></li>
-                            <li><i class="fa fa-briefcase color-green"></i> Web Design &amp; HTML/CSS</li>
                         </ul>
                         <p>{{ sponsor.description |safe }}
                    </div>
